tests/errors/surf_arity_08.ki
# sorted() given a bad keyword argument
discard sorted([3, 1, 2], bad = 1)
